src/test/resources/example/cocos/invalid/invalidMethSigName.ocl
ocl invalidMethSigName {
  context boolean Person.PersonalMsg()
  pre Test: true;
  post Test: result == List{m in p.message | !m.isAuctionSpecific()};
}
